--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <div id="carousel-frame">
+    <div class="slide-container">
+      <img class="carousel-slide" src="" alt="1">
+      <img class="carousel-slide" src="" alt="2">
+      <img class="carousel-slide" src="" alt="3">
+    </div>
+  </div>
 </body>
 </html>
