Create next and previous slide functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="slide-container">
       <img class="carousel-slide" src="" alt="1">
       <img class="carousel-slide" src="" alt="2">
-      <img class="carousel-slide" src="" alt="3">
+      <img class="carousel-slide showing" src="" alt="3">
     </div>
   </div>
 </body>
