Link buttons to slide changing functions

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="carousel-frame">
-    <div class="slide-container">
-      <img class="carousel-slide" src="" alt="1">
-      <img class="carousel-slide" src="" alt="2">
-      <img class="carousel-slide showing" src="" alt="3">
+  <div id="carousel">
+    <button class="previous-slide">&lt;</button>
+    <div id="carousel-frame">
+      <div class="slide-container">
+        <img class="carousel-slide" src="" alt="1">
+        <img class="carousel-slide" src="" alt="2">
+        <img class="carousel-slide showing" src="" alt="3">
+      </div>
     </div>
+    <button class="next-slide">&#62;</button>
   </div>
 </body>
 </html>
