--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <button class="previous-slide">&lt;</button>
     <div id="carousel-frame">
       <div class="slide-container">
-        <img class="carousel-slide" data-slide="1" src="" alt="1">
-        <img class="carousel-slide" data-slide="2" src="" alt="2">
-        <img class="carousel-slide showing" data-slide="3" src="" alt="3">
+        <img class="carousel-slide" data-slide="1" src="https://picsum.photos/550/300?random=1" alt="Image from picsum photos">
+        <img class="carousel-slide" data-slide="2" src="https://picsum.photos/550/300?random=2" alt="Image from picsum photos">
+        <img class="carousel-slide showing" data-slide="3" src="https://picsum.photos/550/300?random=3" alt="Image from picsum photos">
       </div>
     </div>
     <button class="next-slide">&#62;</button>
@@ -23,6 +23,9 @@
       <div class="navigation-dot" data-slide="2"></div>
       <div class="navigation-dot selected" data-slide="3"></div>
     </div>
+  </div>
+  <div id="footer">
+    Images from https://picsum.photos/
   </div>
 </body>
 </html>
