Add an extra image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img class="carousel-slide" data-slide="1" src="https://picsum.photos/550/300?random=1" alt="Image from picsum photos">
         <img class="carousel-slide" data-slide="2" src="https://picsum.photos/550/300?random=2" alt="Image from picsum photos">
         <img class="carousel-slide showing" data-slide="3" src="https://picsum.photos/550/300?random=3" alt="Image from picsum photos">
+        <img class="carousel-slide" data-slide="4" src="https://picsum.photos/550/300?random=4" alt="Image from picsum photos">
       </div>
     </div>
     <button class="next-slide">&#62;</button>
@@ -22,6 +23,7 @@
       <div class="navigation-dot" data-slide="1"></div>
       <div class="navigation-dot" data-slide="2"></div>
       <div class="navigation-dot selected" data-slide="3"></div>
+      <div class="navigation-dot" data-slide="4"></div>
     </div>
   </div>
   <div id="footer">
